--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -25,26 +25,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YFU-YZ-QPf">
-                                            <rect key="frame" x="370" y="15" width="220" height="30"/>
-                                            <color key="backgroundColor" red="0.0" green="0.50196078430000002" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="Tgg-3c-9jM"/>
-                                            </constraints>
-                                            <state key="normal" title="+">
-                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                            <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                    <integer key="value" value="15"/>
-                                                </userDefinedRuntimeAttribute>
-                                            </userDefinedRuntimeAttributes>
-                                            <connections>
-                                                <action selector="didTouchAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iu5-ii-XfM"/>
-                                            </connections>
-                                        </button>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Summary" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LMK-Yk-8BT">
-                                            <rect key="frame" x="110" y="18" width="120" height="29"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Summary" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LMK-Yk-8BT">
+                                            <rect key="frame" x="108" y="18" width="120" height="29"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="120" id="6DE-Qz-1vp"/>
                                                 <constraint firstAttribute="height" constant="29" id="iLL-85-fMu"/>
@@ -72,6 +54,24 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YFU-YZ-QPf">
+                                            <rect key="frame" x="372" y="16" width="220" height="30"/>
+                                            <color key="backgroundColor" red="0.0" green="0.50196078430000002" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="Tgg-3c-9jM"/>
+                                            </constraints>
+                                            <state key="normal" title="+">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="15"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="didTouchAddButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iu5-ii-XfM"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
@@ -105,10 +105,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gn0-Rz-uNp">
-                                                    <rect key="frame" x="502" y="0.0" width="80" height="40"/>
+                                                    <rect key="frame" x="538" y="0.0" width="44" height="44"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="I4d-3y-we1"/>
-                                                        <constraint firstAttribute="width" constant="80" id="v4f-Kh-S2c"/>
+                                                        <constraint firstAttribute="height" constant="44" id="I4d-3y-we1"/>
+                                                        <constraint firstAttribute="width" constant="44" id="v4f-Kh-S2c"/>
                                                     </constraints>
                                                     <state key="normal" title="Prioritet">
                                                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -118,34 +118,43 @@
                                                         <action selector="priorAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JXI-Sc-Avp"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y7a-6M-Fk5">
-                                                    <rect key="frame" x="256" y="18" width="236" height="14"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCV-h5-h2Q">
-                                                    <rect key="frame" x="18" y="17" width="236" height="15"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fRa-AY-Duo">
+                                                    <rect key="frame" x="18" y="12" width="100" height="19"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="8L9-uR-lGk"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MSF-W6-0b6">
+                                                    <rect key="frame" x="128" y="12" width="400" height="19"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Y7a-6M-Fk5" secondAttribute="bottom" constant="3" id="6tu-9l-2M5"/>
+                                                <constraint firstItem="Gn0-Rz-uNp" firstAttribute="leading" secondItem="fRa-AY-Duo" secondAttribute="trailing" constant="10" id="5Xd-Up-VQQ"/>
+                                                <constraint firstItem="Gn0-Rz-uNp" firstAttribute="leading" secondItem="MSF-W6-0b6" secondAttribute="trailing" constant="10" id="9fP-ZQ-f11"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="fRa-AY-Duo" secondAttribute="bottom" constant="4" id="H2k-rn-9Q1"/>
+                                                <constraint firstItem="fRa-AY-Duo" firstAttribute="leading" secondItem="Itv-0w-ThZ" secondAttribute="leadingMargin" constant="10" id="I8X-te-0s9"/>
+                                                <constraint firstItem="MSF-W6-0b6" firstAttribute="top" secondItem="Itv-0w-ThZ" secondAttribute="topMargin" constant="4" id="Ja5-mn-Vhc"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Gn0-Rz-uNp" secondAttribute="trailing" constant="10" id="LwR-pT-22F"/>
-                                                <constraint firstItem="Y7a-6M-Fk5" firstAttribute="width" secondItem="bCV-h5-h2Q" secondAttribute="width" id="Pmx-Ld-tyM"/>
-                                                <constraint firstItem="bCV-h5-h2Q" firstAttribute="bottom" secondItem="Itv-0w-ThZ" secondAttribute="bottomMargin" constant="-3" id="U9h-Pn-MbS"/>
-                                                <constraint firstItem="bCV-h5-h2Q" firstAttribute="leading" secondItem="Itv-0w-ThZ" secondAttribute="leadingMargin" constant="10" id="a6f-aT-LKb"/>
-                                                <constraint firstItem="Y7a-6M-Fk5" firstAttribute="leading" secondItem="bCV-h5-h2Q" secondAttribute="trailing" constant="2" id="gPK-nP-oAB"/>
+                                                <constraint firstItem="fRa-AY-Duo" firstAttribute="top" secondItem="Itv-0w-ThZ" secondAttribute="topMargin" constant="4" id="P9L-Lb-FZP"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="MSF-W6-0b6" secondAttribute="bottom" constant="4" id="RLx-7i-GUG"/>
+                                                <constraint firstItem="MSF-W6-0b6" firstAttribute="leading" secondItem="fRa-AY-Duo" secondAttribute="trailing" constant="10" id="d6L-hj-hIc"/>
                                                 <constraint firstItem="Gn0-Rz-uNp" firstAttribute="top" secondItem="Itv-0w-ThZ" secondAttribute="topMargin" constant="-8" id="oGT-Ep-I0e"/>
-                                                <constraint firstItem="Gn0-Rz-uNp" firstAttribute="leading" secondItem="Y7a-6M-Fk5" secondAttribute="trailing" constant="10" id="tez-B2-5Oy"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="5Xd-Up-VQQ"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="TextField1" destination="fRa-AY-Duo" id="Gj1-DE-R4E"/>
                                             <outlet property="myButton" destination="Gn0-Rz-uNp" id="c5j-Nl-1xX"/>
-                                            <outlet property="textLabel" destination="bCV-h5-h2Q" id="RkQ-5D-Ujt"/>
-                                            <outlet property="textLabel1" destination="Y7a-6M-Fk5" id="Z3D-yf-hkS"/>
+                                            <outlet property="textField1" destination="fRa-AY-Duo" id="sJ6-bR-MLX"/>
+                                            <outlet property="textField2" destination="MSF-W6-0b6" id="ENP-Sp-V2W"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
