--- a/GoGallery/Base.lproj/Main.storyboard
+++ b/GoGallery/Base.lproj/Main.storyboard
@@ -18,39 +18,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="W1U-QV-GyB">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="305" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="W1U-QV-GyB">
                                 <rect key="frame" x="20" y="20" width="560" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="dpR-yQ-TQc" customClass="MyCell">
-                                        <rect key="frame" x="0.0" y="28" width="560" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="305" id="dpR-yQ-TQc" customClass="MyCell">
+                                        <rect key="frame" x="0.0" y="28" width="560" height="305"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dpR-yQ-TQc" id="ycO-Wa-PPS">
-                                            <rect key="frame" x="0.0" y="0.0" width="560" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="304"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="47a-g8-1hQ">
-                                                    <rect key="frame" x="40" y="-7" width="77" height="50"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="47a-g8-1hQ">
+                                                    <rect key="frame" x="8" y="8" width="0.0" height="288"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" id="raH-i8-GTh"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2W-jL-c97">
-                                                    <rect key="frame" x="148" y="7" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKV-OB-aYN">
+                                                    <rect key="frame" x="13" y="233" width="175" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="j4Q-pw-nh2"/>
+                                                        <constraint firstAttribute="width" constant="175" id="ram-Te-tMJ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <color key="textColor" red="0.15596998879999999" green="0.3909254808" blue="0.085718322759999993" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKV-OB-aYN">
-                                                    <rect key="frame" x="218" y="7" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IuE-Lx-KGv">
+                                                    <rect key="frame" x="13" y="273" width="175" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="2Ab-NN-j8A"/>
+                                                        <constraint firstAttribute="width" constant="175" id="qxl-TH-thM"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                    <color key="textColor" red="0.15596998879999999" green="0.3909254808" blue="0.085718322759999993" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IuE-Lx-KGv">
-                                                    <rect key="frame" x="281" y="11" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2W-jL-c97">
+                                                    <rect key="frame" x="13" y="198" width="175" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="dPa-xP-hgk"/>
+                                                        <constraint firstAttribute="width" constant="175" id="yYi-cp-dXg"/>
+                                                        <constraint firstAttribute="height" constant="30" id="z1c-a7-GUH"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="dPa-xP-hgk"/>
+                                                        </mask>
+                                                    </variation>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="47a-g8-1hQ" firstAttribute="leading" secondItem="ycO-Wa-PPS" secondAttribute="leadingMargin" id="6KB-7J-nHa"/>
+                                                <constraint firstItem="IuE-Lx-KGv" firstAttribute="leading" secondItem="47a-g8-1hQ" secondAttribute="trailing" id="9Nf-3l-Nsh"/>
+                                                <constraint firstItem="IuE-Lx-KGv" firstAttribute="leading" secondItem="47a-g8-1hQ" secondAttribute="trailing" constant="5" id="O5a-2b-6RO"/>
+                                                <constraint firstItem="47a-g8-1hQ" firstAttribute="top" secondItem="ycO-Wa-PPS" secondAttribute="topMargin" id="TIX-zA-tc2"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Z2W-jL-c97" secondAttribute="trailing" constant="100" id="Vsx-Y0-gX8"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="47a-g8-1hQ" secondAttribute="bottom" id="Wge-Ny-m2a"/>
+                                                <constraint firstItem="IuE-Lx-KGv" firstAttribute="top" secondItem="AKV-OB-aYN" secondAttribute="bottom" constant="10" id="XKx-ts-jU7"/>
+                                                <constraint firstItem="Z2W-jL-c97" firstAttribute="top" secondItem="ycO-Wa-PPS" secondAttribute="topMargin" constant="10" id="YjK-ze-8Dp"/>
+                                                <constraint firstItem="Z2W-jL-c97" firstAttribute="top" secondItem="ycO-Wa-PPS" secondAttribute="topMargin" constant="190" id="ZJA-FV-xzx"/>
+                                                <constraint firstItem="AKV-OB-aYN" firstAttribute="leading" secondItem="Z2W-jL-c97" secondAttribute="trailing" constant="40" id="aUk-t8-Axy"/>
+                                                <constraint firstItem="Z2W-jL-c97" firstAttribute="leading" secondItem="47a-g8-1hQ" secondAttribute="trailing" constant="5" id="bU7-Dn-dI7"/>
+                                                <constraint firstItem="Z2W-jL-c97" firstAttribute="leading" secondItem="47a-g8-1hQ" secondAttribute="trailing" constant="20" id="eNk-9l-44O"/>
+                                                <constraint firstItem="AKV-OB-aYN" firstAttribute="leading" secondItem="47a-g8-1hQ" secondAttribute="trailing" constant="5" id="gSE-cr-NBW"/>
+                                                <constraint firstItem="Z2W-jL-c97" firstAttribute="leading" secondItem="47a-g8-1hQ" secondAttribute="trailing" id="nfg-sf-meH"/>
+                                                <constraint firstItem="AKV-OB-aYN" firstAttribute="top" secondItem="Z2W-jL-c97" secondAttribute="bottom" constant="5" id="u5r-y4-z3i"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="Vsx-Y0-gX8"/>
+                                                    <exclude reference="YjK-ze-8Dp"/>
+                                                    <exclude reference="eNk-9l-44O"/>
+                                                    <exclude reference="nfg-sf-meH"/>
+                                                    <exclude reference="aUk-t8-Axy"/>
+                                                    <exclude reference="9Nf-3l-Nsh"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="imageCell" destination="47a-g8-1hQ" id="YnN-gJ-O2y"/>
